[project]
name = "afew"
description = "An initial tagging script for notmuch mail"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Filters",
    "Topic :: Database",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "chardet",
    "dkimpy",
    "notmuch2",
]
license = "ISC"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/afewmail/afew"

[project.scripts]
afew = "afew.commands:main"

[project.entry-points."afew.filter"]
ArchiveSentMailsFilter = "afew.filters.ArchiveSentMailsFilter:ArchiveSentMailsFilter"
DKIMValidityFilter = "afew.filters.DKIMValidityFilter:DKIMValidityFilter"
DMARCReportInspectionFilter = "afew.filters.DMARCReportInspectionFilter:DMARCReportInspectionFilter"
Filter = "afew.filters.BaseFilter:Filter"
FolderNameFilter = "afew.filters.FolderNameFilter:FolderNameFilter"
HeaderMatchingFilter = "afew.filters.HeaderMatchingFilter:HeaderMatchingFilter"
InboxFilter = "afew.filters.InboxFilter:InboxFilter"
KillThreadsFilter = "afew.filters.KillThreadsFilter:KillThreadsFilter"
ListMailsFilter = "afew.filters.ListMailsFilter:ListMailsFilter"
MeFilter = "afew.filters.MeFilter:MeFilter"
PropagateTagsByRegexInThreadFilter = "afew.filters.PropagateTagsByRegexInThreadFilter:PropagateTagsByRegexInThreadFilter"
PropagateTagsInThreadFilter = "afew.filters.PropagateTagsInThreadFilter:PropagateTagsInThreadFilter"
SentMailsFilter = "afew.filters.SentMailsFilter:SentMailsFilter"
SpamFilter = "afew.filters.SpamFilter:SpamFilter"

[project.optional-dependencies]
doc = [
    "sphinx"
]
lint = [
    "flake8"
]
test = [
    "freezegun",
    "pytest"
]

[build-system]
requires = ["setuptools >= 80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"
